--- a/Dashboard_MilkStore/Views/Shared/_Layout.cshtml
+++ b/Dashboard_MilkStore/Views/Shared/_Layout.cshtml
@@ -952,6 +952,70 @@
             .container-fluid {
                 padding: 0 1rem;
             }
+
+            /* Footer responsive adjustments */
+            .footer {
+                width: 100% !important;
+                max-width: 100% !important;
+                margin-left: 0 !important;
+                margin-right: 0 !important;
+            }
+
+            .footer .container {
+                max-width: 100%;
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+            }
+
+            .footer-payment {
+                padding: 6px 10px;
+                font-size: 0.85rem;
+            }
+
+            .footer-payment .payment-icon {
+                font-size: 1.3rem;
+            }
+
+            .footer-copyright {
+                padding-left: 0;
+                font-size: 0.85rem;
+            }
+        }
+
+        /* Small screens */
+        @@media (max-width: 768px) {
+            .footer-bottom .row {
+                flex-direction: column;
+            }
+
+            .footer-payment {
+                margin-top: 1rem;
+                width: 100%;
+                text-align: center;
+            }
+
+            .footer-payment span {
+                display: block;
+                margin-bottom: 0.5rem;
+            }
+
+            .footer-copyright {
+                text-align: center;
+                width: 100%;
+            }
+
+            .footer-contact-item {
+                padding: 8px 12px;
+            }
+
+            .footer-contact-icon {
+                width: 35px;
+                height: 35px;
+            }
+
+            .footer-contact-text {
+                font-size: 0.85rem;
+            }
         }
 
         .sidebar-menu {
@@ -1208,13 +1272,13 @@
                             </div>
                             <p class="mb-3 footer-text">Quản lý hiệu quả cửa hàng sữa của bạn với công cụ phân tích doanh thu và quản lý sản phẩm toàn diện.</p>
                             <div class="d-flex gap-3 mb-3">
-                                <a href="#" class="social-icon facebook-icon">
+                                <a href="https://www.facebook.com/hien.trung.581730/" class="social-icon facebook-icon">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="#" class="social-icon twitter-icon">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" class="social-icon instagram-icon">
+                                <a href="https://www.instagram.com/jeongjunghyun07/" class="social-icon instagram-icon">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                                 <a href="#" class="social-icon linkedin-icon">
